# django_skilbox

./: .dockerignore  Dockerfile  log.txt  log.txt.1  log.txt.3  pyproject.toml  queries.sql  requirements.txt
Django_Cache/: Dockerfile  demo.py  devices.csv  docker-compose.yaml  log.txt.2  requirements.txt
Django_Cache/mysite/: log.txt  shopapp-products-fixtures.xml
Django_Cache/mysite/blogapp/: models.py
Django_Cache/mysite/blogapp_new/: apps.py  models.py  urls.py  views.py
Django_Cache/mysite/myapiapp/: urls.py  views.py
Django_Cache/mysite/myauth/: forms.py  models.py  urls.py  views.py
Django_Cache/mysite/mysite/: settings.py  sitemaps.py  urls.py
Django_Cache/mysite/requestdataapp/: middlewares.py  views.py
Django_Cache/mysite/shopapp/: admin.py  common.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/: log.txt  requirements.txt  shopapp-products-fixtures.json  shopapp.fixtures.json
mysite/blogapp/: urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0003_alter_article_content_alter_author_bio.py
mysite/myauth/: admin.py  tests.py  urls.py  views.py
mysite/myauth/migrations/: 0002_profile_avatar.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: exceptions.py  forms.py
mysite/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  urls.py  views.py
mysite/shopapp/fixtures/: products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0004_rename_erchived_product_archived.py  0005_order.py  (+2 more)
(+62 files in other folders)
